applications/crafty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crafty
  namespace: crafty
  labels:
    app: crafty
spec:
  type: ClusterIP
  selector:
    app: crafty
  ports:
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: dynmap
    port: 8123
    targetPort: 8123
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: crafty-minecraft
  namespace: crafty
  labels:
    app: crafty
spec:
  type: LoadBalancer
  selector:
    app: crafty
  ports:
  - name: bedrock
    port: 19132
    targetPort: 19132
    protocol: UDP
  - name: minecraft-1
    port: 25565
    targetPort: 25565
    protocol: TCP
  - name: minecraft-2
    port: 25566
    targetPort: 25566
    protocol: TCP
  - name: minecraft-3
    port: 25567
    targetPort: 25567
    protocol: TCP
  - name: minecraft-4
    port: 25568
    targetPort: 25568
    protocol: TCP
  - name: minecraft-5
    port: 25569
    targetPort: 25569
    protocol: TCP
